chore: Updating koa dep to 3.0.3 (#8694)

--- a/web/package.json
+++ b/web/package.json
@@ -202,6 +202,7 @@
     "jest-fetch-mock": "^3.0.3",
     "jsdoc-to-markdown": "8.0.1",
     "jsdom": "~22.1.0",
+    "koa": "3.0.3",
     "loader-utils": "^3.2.1",
     "mini-css-extract-plugin": "^2.7.6",
     "nx": "21.2.2",
@@ -244,6 +245,7 @@
     "diff": ">=3.5.0",
     "esbuild": ">=0.25.5",
     "jpeg-js": "0.4.4",
+    "koa": ">=3.0.3",
     "lodash": "4.17.21",
     "merge": "2.1.1",
     "ws": "8.17.1",
