feat: FIT-838: Update design of Ask AI intro popover (#8698)
Co-authored-by: ricardoantoniocm <ricardoantoniocm@users.noreply.github.com>

--- a/label_studio/users/product_tours/configs/show_ask_ai.yml
+++ b/label_studio/users/product_tours/configs/show_ask_ai.yml
@@ -1,8 +1,15 @@
 steps:
   - target: '[data-testid="ask-ai-button"]'
     placement: bottom
-    title: 'Hi! There’s a new way to get support'
+    title: 'Get support from the AI Assistant'
     content: Click on the AI Assistant icon and quickly get answers to any questions regarding Label Studio.
     disableBeacon: true
+    disableOverlay: true
+    offset: 8
+    styles:
+      options:
+        backgroundColor: "var(--color-primary-surface)"
+        textColor: "var(--color-primary-surface-content)"
+        primaryColor: "var(--color-neutral-on-dark-surface)"
     locale:
-      last: "OK"
+      last: "Got It"
