--- a/web/package.json
+++ b/web/package.json
@@ -26,11 +26,11 @@
     "lsf:unit": "nx run editor:unit",
     "dm:watch": "nx run datamanager:build:development --watch",
     "dm:unit": "nx run datamanager:unit",
-    "build": "NODE_ENV=production yarn ls:build",
+    "build": "cross-env NODE_ENV=production yarn ls:build",
     "version:libs": "nx run-many --target=version",
     "docs": "SCHEMA_JSON_PATH=$PWD/libs/core/src/lib/utils/schema/tags.json nx docs editor && biome check --apply $SCHEMA_JSON_PATH",
     "watch": "NODE_ENV=development BUILD_NO_SERVER=true yarn ls:watch",
-    "dev": "NODE_ENV=development BUILD_NO_SERVER=true yarn ls:dev",
+    "dev": "cross-env NODE_ENV=development BUILD_NO_SERVER=true yarn ls:dev",
     "test:e2e": "yarn ls:e2e && yarn lsf:e2e",
     "test:integration": "yarn lsf:integration",
     "test:unit": "nx run-many --target=unit",
@@ -188,6 +188,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.3.7",
+    "cross-env": "^10.1.0",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "cypress": "14.5.0",
@@ -251,8 +252,7 @@
     "ws": "8.17.1",
     "moment": "2.29.4",
     "on-headers": "1.1.0",
-    "form-data": "4.0.4",
-    "stylus": "0.0.1-security"
+    "form-data": "4.0.4"
   },
   "copyFiles": [
     {
